--- a/spring-kadai1-hallo/src/main/resources/templates/omikuji.html
+++ b/spring-kadai1-hallo/src/main/resources/templates/omikuji.html
@@ -7,7 +7,7 @@
 <body>
 	<form method="post" action="/omikuji">
 		<button>おみくじを引く</button>
-		<p name="kuzi">[[{$kuzi}]]</p>
+		<p>[[${kuzi}]]</p>
 		</form>
 </body>
 </html>
