--- a/spring-kadai6-jpa-crud/src/main/resources/templates/items.html
+++ b/spring-kadai6-jpa-crud/src/main/resources/templates/items.html
@@ -7,15 +7,7 @@
 <body>
 		
 	
-	<h1>商品一覧</h1>
-	
-	
-	<form method="get" action="/items">
-			<input type="text" name="keyword" placeholder="商品名">
-			<button>検索</button>
-	</form>
-	
-	
+	<h1>商品一覧</h1>	
 	
 	<table border="1">
 		<tr>
@@ -43,5 +35,6 @@
 		</tr>
 	</table>
 		<a href="/items/add">新規登録</a>
+		<a href="/category">カテゴリー 一覧へ</a>
 </body>
 </html>
