--- a/spring-chap8-ec/src/main/resources/templates/header.html
+++ b/spring-chap8-ec/src/main/resources/templates/header.html
@@ -1,32 +1,5 @@
-<link
-  rel="stylesheet"
-  th:href="@{/webjars/bootstrap/5.3.5/css/bootstrap.min.css}"
-/>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/items">サンプルショッピング</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link" href="/logout">ログアウト</a>
-        <a class="nav-link" href="/cart">カートを見る</a>
-        <a class="nav-link disabled">[[${@account.name}]]さんがログイン中</a>
-      </div>
-    </div>
-  </div>
-</nav>
-
-<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script
-  th:src="@{/webjars/bootstrap/5.3.5/js/bootstrap.bundle.min.js}"
-></script>
+<header>
+  <h1><a href="/items">サンプルショッピング</a></h1>
+  <span>[[${@account.name}]]さんがログイン中</span>
+  <a href="/logout">ログアウト</a>
+</header>
