--- a/spring-chap8-ec/src/main/resources/templates/login.html
+++ b/spring-chap8-ec/src/main/resources/templates/login.html
@@ -2,11 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>ログイン</title>
-   <link href="/css/style.css" rel="stylesheet" /> 
-  <link
-    rel="stylesheet"
-    th:href="@{/webjars/bootstrap/5.3.5/css/bootstrap.min.css}"
-  />
+  <link href="/css/style.css" rel="stylesheet" />
 </head>
 <body>
   <header>
@@ -15,16 +11,11 @@
   <main>
     <form method="post" action="/login">
       <input type="text" name="name" placeholder="名前を入力してください" />
-      <button class="btn btn-primary">ログイン</button>
+      <button>ログイン</button>
       <br /><span th:text="${message}" style="color: red"></span>
     </form>
   </main>
   <footer>
     <small>&copy; ABCショップ</small>
   </footer>
-  <script th:src="@{/webjars/jquery/jquery.min.js}">
-  </script>
-  <script
-    th:src="@{/webjars/bootstrap/5.3.5/js/bootstrap.bundle.min.js}"
-  ></script>
 </body>
