--- a/spring-kadai6-jpa-crud/src/main/resources/templates/category.html
+++ b/spring-kadai6-jpa-crud/src/main/resources/templates/category.html
@@ -1,23 +1,56 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-	<title>カテゴリー一覧</title>
-</head>
-<body>
-		<h1>一覧表示</h1>
-		
-		<table border="1">
-			<tr>
-				<th>ID</th>
-				<th>カテゴリー名</th>
-			</tr>
-			<tr th:each="categories:${categoryList}">
-				<td th:text="${categories.id}"></td>
-				<td th:text="${categories.name}"></td>
-			</tr>
-		</table>
-		<a href="/category/add">新規登録</a>
-		<a href="/items">商品一覧へ</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>カテゴリー一覧</title>
+    <link
+      rel="stylesheet"
+      th:href="@{/webjars/bootstrap/5.3.5/css/bootstrap.min.css}"
+    />
+  </head>
+  <body>
+    <h1>一覧表示</h1>
+
+    <table class="table table-Info table-striped-columns">
+      <tr>
+        <th>ID</th>
+        <th>カテゴリー名</th>
+        <th>更新</th>
+        <th>削除</th>
+      </tr>
+      <tr th:each="categories:${categoryList}">
+        <td th:text="${categories.id}"></td>
+        <td th:text="${categories.name}"></td>
+        <td>
+          <form method="get" th:action="|/category/${categories.id}/edit|">
+            <input
+              type="hidden"
+              name="categoryId"
+              th:value="${categories.id}"
+            />
+            <button type="button" class="btn btn-primary">更新</button>
+          </form>
+        </td>
+
+        <td>
+          <form method="post" th:action="|/category/${categories.id}/delete|">
+            <input
+              type="hidden"
+              name="categoryId"
+              th:value="${categories.id}"
+            />
+            <button type="button" class="btn btn-primary">削除</button>
+          </form>
+        </td>
+      </tr>
+    </table>
+    <a href="/category/add">新規登録</a>
+    <a
+      class="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+      href="/items"
+      >商品一覧へ
+    </a>
+  </body>
+  <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+  <script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
 </html>
