--- a/spring-chap8-ec/src/main/resources/templates/footer.html
+++ b/spring-chap8-ec/src/main/resources/templates/footer.html
@@ -1,3 +1,5 @@
-<footer>
-  <small>&copy; ABCショップ</small>
+<footer class="text-center">
+  <span class="d-block p-2 text-bg-dark"
+    ><small>&copy; ABCショップ</small></span
+  >
 </footer>
