--- a/spring-chap8-ec/src/main/resources/templates/items.html
+++ b/spring-chap8-ec/src/main/resources/templates/items.html
@@ -10,26 +10,26 @@
 </head>
 <body>
   <header th:replace="header"></header>
-  <div class="dropdown">
-    <a
-      class="btn btn-secondary dropdown-toggle"
-      role="button"
-      data-bs-toggle="dropdown"
-      aria-expanded="false"
-    >
-      商品ソート
-    </a>
-    <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="/items">全商品</a></li>
+  <nav>
+    <ul class="nav nav-underline">
+      <li class="nav-item">
+        <a class="nav-link disabled" aria-current="page" href="/items"
+          >項目検索</a
+        >
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" aria-current="page" href="/items">全商品</a>
+      </li>
       <li th:each="categories : ${categoryList}">
         <a
-          class="dropdown-item"
+          class="nav-link"
           th:href="|/items?categoryId=${categories.id}|"
           th:text="${categories.name}"
         ></a>
       </li>
     </ul>
-  </div>
+  </nav>
+
   <main>
     <table border="1" class="table table-striped">
       <tr>
